# effects-playground

./: CHANGELOG.md  Main.hs  README.md  effects-playground.cabal
app/: Main.hs
src/: Cap.hs  Cloud.hs  Fusion.hs  Poly.hs  ReaderIO.hs  Tagless.hs
