cabal-version:       >=1.10

name:                effects-playground
version:             0.1.0.0
homepage:            https://github.com/gvolpe/effects-playground
bug-reports:         https://github.com/gvolpe/effects-playground/issues
license-file:        LICENSE
author:              Gabriel Volpe
maintainer:          volpegabriel@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Fusion
  hs-source-dirs:      src
  build-depends:       base
                     , fused-effects >= 0.4.0.0
  default-language:    Haskell2010

executable effects-playground
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      app
  build-depends:       base
                     , effects-playground
                     , fused-effects >= 0.4.0.0
  default-language:    Haskell2010
