cabal-version:       >=1.10

name:                effects-playground
version:             0.1.0.0
homepage:            https://github.com/gvolpe/effects-playground
bug-reports:         https://github.com/gvolpe/effects-playground/issues
license-file:        LICENSE
author:              Gabriel Volpe
maintainer:          volpegabriel@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Fusion
                     , Poly
                     , ReaderIO
  hs-source-dirs:      src
  ghc-options:         -fplugin=Polysemy.Plugin -O2 -flate-specialise -fspecialise-aggressively
  default-extensions:  DataKinds FlexibleContexts GADTs LambdaCase PolyKinds RankNTypes ScopedTypeVariables
  TypeApplications TypeOperators TypeFamilies BlockArguments
  build-depends:       base >= 4.7 && < 5
                     , fused-effects >= 0.4.0.0
                     , mtl
                     , polysemy >= 0.3.0.0
                     , polysemy-plugin >= 0.2.0.1
                     , rio >= 0.1.9.2
                     , transient >= 0.6.3
  default-language:    Haskell2010

executable effects-playground
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      app
  build-depends:       base >= 4.7 && < 5
                     , effects-playground
  default-language:    Haskell2010
